# VulkanEngine

./: .clang-format  .editorconfig  CMakeLists.txt  build.sh
includes/: glfw_initialization.h  precomp.h
src/: glfw_initialization.cc  glfw_initialization.cpp  glfw_initialization.h  glfw_monitor.cpp  glfw_monitor.h  glfw_window.cpp  glfw_window.h  graphics.cpp  graphics.h  main.cc  main.cpp  precomp.h  utilities.cpp  utilities.h
